--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -37,20 +37,9 @@
     </script>
 
     <script src="/js/jquery.min.js"></script>
-    <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/toastr.min.js"></script>
-    <script src="/js/jquery.scrollUp.min.js"></script>
-    <script src="/js/md5.min.js"></script>
-    <script src="/js/marked.min.js"></script>
-    <script src="/js/select2.full.min.js"></script>
-    <script src="/js/biz/forum.js"></script>
-    <script src="/js/biz/loadMore.js"></script>
-    <script src="/js/biz/toolaction.js"></script>
-    <script src="/js/biz/login.js"></script>
-    <script src="/js/biz/select2.zh_CN.js"></script>
-    <script src="/js/jsonld.min.js"></script>
+    <script src="/js/forum.js"></script>
     <script src="/js/clipboard.min.js"></script>
-    <script src="/js/highlight.min.js"></script>
+
   </head>
 </html>
