--- a/src/main/resources/templates/layout/footer.html
+++ b/src/main/resources/templates/layout/footer.html
@@ -12,7 +12,7 @@
           target="_blank">
           © 2016-2023 技术派
         </a>
-<!--        <span th:text="' | ' + ${global.onlineCnt} + ' 人在线'"></span>-->
+        <span th:text="' | ' + ${global.onlineCnt} + ' 人在线'"></span>
       </div>
 <!--      <div>本站总pv: <span class="visit_cnt" th:text="${global.siteStatisticInfo.pv}">957810</span> &nbsp;-->
 <!--        | 总uv: <span class="visit_cnt" th:text="${global.siteStatisticInfo.uv}">153147</span> &nbsp; |-->
