--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -26,6 +26,7 @@
     <link rel="icon" href="/img/icon.png" />
     <link href="/css/global.css" rel="stylesheet" />
     <link href="/css/common.css" rel="stylesheet" />
+    <link href="/css/toastr.min.css" rel="stylesheet" />
     <script>
       var _hmt = _hmt || [];
       (function() {
@@ -40,6 +41,7 @@
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/forum.js"></script>
     <script src="/js/clipboard.min.js"></script>
+    <script src="/js/toastr.min.js"></script>
 
   </head>
 </html>
