1、阿里云OSS上传文件

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -308,7 +308,7 @@
 
     // 添加用户端消息
     function addClientMsg(messageContent, showLoading) {
-        const avatarUrl = '/img/123.jpg';
+        const avatarUrl = user.photoUrl;
         let loadingDiv = `
         <div class="home_chat-message-actions__loading">
             <div class="home_chat-message-action-loading__6ToUp">
