--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -42,6 +42,7 @@
     <script src="/js/forum.js"></script>
     <script src="/js/clipboard.min.js"></script>
     <script src="/js/toastr.min.js"></script>
+    <script src="/js/highlight.min.js"></script>
 
   </head>
 </html>
