1、敏感词过滤；2、拦截器处理未登录

--- a/src/main/resources/templates/err/500.html
+++ b/src/main/resources/templates/err/500.html
@@ -3,7 +3,7 @@
 
 <body>
  导航栏
-<div th:replace="components/layout/container :: container_all(~{::content})">
+<div th:replace="layout/container :: container_all(~{::content})">
     <content>
         <div style="background-color: #fff;text-align: left;min-height: 600px;margin-bottom: 20px;">
             <p>
