--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -308,7 +308,7 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
-  max-width: 1200px;
+  max-width: 92%;
   margin: 0 auto;
 }
 
