--- a/src/main/resources/templates/err/404.html
+++ b/src/main/resources/templates/err/404.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
     <body class="body-404">
-        <div th:replace="components/layout/header :: head(~{::title}, ~{}, ~{})">
+        <div th:replace="layout/header :: head(~{::title}, ~{}, ~{})">
             <title th:text="">技术派</title>
         </div>
 
         <!-- 导航栏 -->
-        <div th:replace="components/layout/navbar :: navbar"></div>
+        <div th:replace="layout/navbar :: navbar"></div>
 
-        <div th:replace="components/layout/container :: container_all(~{::content})">
+        <div th:replace="layout/container :: container_all(~{::content})">
             <content class="text-center">
                 <p>
                     <span style="font-size: 30px;">404页面不存在！！！</span>
                 </p>
             </content>
         </div>
-        <div th:replace="components/layout/footer :: footer"></div>
+        <div th:replace="layout/footer :: footer"></div>
     </body>
 </html>
